Fixed z-index issue with homebox icons

--- a/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
+++ b/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
@@ -324,9 +324,8 @@ label {
   z-index: 9999;
 }
 
-/*removes z-index on dashboard minimize/move/maximize icons*/
 .portlet-icon {
-  z-index: 0;
+  z-index: 100;
 }
 
 .front #content-top-inner {
